objects/Dinner__c.object
<CustomObject>
    <description>description field 2</description>
    <fields>
        <fullName>Automatic_Renewal_Clause__c</fullName>
        <label>Automatic Renewal Clause</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Auto__c</fullName>
        <externalId>true</externalId>
        <label>External Auto</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LateDinner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Description New</description>
        <label>LateDinner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Picklist_Dinner_Table__c</fullName>
        <label>Picklist Dinner Table</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dinner Table1</fullName>
                </value>
                <value>
                    <fullName>Dinner Table2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Dinner__c</fullName>
        <label>Picklist Dinner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dinner1</fullName>
                </value>
                <value>
                    <fullName>Dinner2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Point_of_contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the description of the field. 111111111</description>
        <label>Point of contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dinners</relationshipLabel>
        <relationshipName>Dinners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEST_US__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TEST US</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Table__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Table</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VS_PS_Test_D__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VS PS Test D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>historyRetentionPolicy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>historyRetentionPolicy</label>
        <type>Checkbox</type>
    </fields>
    <label>Dinner</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Queue_for_approval_Dinner</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue for approval</label>
        <queue>Queue_for_approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Dinner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dinners</pluralLabel>
    <recordTypes>
        <fullName>Dinner_RT</fullName>
        <active>true</active>
        <label>Dinner RT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dinner_RT_2</fullName>
        <active>true</active>
        <label>Dinner RT 2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nested_Dinner_RT</fullName>
        <active>true</active>
        <label>Nested Dinner RT</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>